--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
    <script src="assets/vendor/php-email-form/validate.js"></script>
 
+   <!-- SweetAlert-->
+   <script src="sweetalert2.min.js"></script>
+   <link rel="stylesheet" href="sweetalert2.min.css">
+
    <!-- Template Main JS File -->
    <script src="assets/js/main.js"></script>
 
